syntax = "proto3";
option java_package = "org.httpsrv.protobuf";

message ForceUpdateInfo {
	string force_update_url = 1;
}